<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_new_player"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/title_activity_new_player"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_players_list"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/title_go_to_activity_players_list"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_save_formation"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/title_action_save_formation"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_save_as_formation"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/title_action_save_as_formation"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/action_load_formation"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/title_action_load_formation"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/action_load_default_formation"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/title_action_load_default_formation"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/action_show_drawing_view"
        android:icon="@android:drawable/ic_menu_save"
        android:title="Activa/desactiva dibuix"
        app:showAsAction="collapseActionView"/>

</menu>